# Elo-Predictions

./: .gitignore  README.md  config.yaml  pyparser.cp312-win_amd64.pyd
analysis/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb
pgn_parser/: CMakeLists.txt  bindings.cpp  buffer.h  parser.cpp  parser.h  states.h
preprocessing/: __main__.py  final.py  pgn.py  reader.py  search.py  visual.py
